# silva

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DEV.md  EXTRA.md  GET_STARTED.md  LICENSE  README.md  RELEASE.md  TESTING_GUIDE_v0.2.5.md  dist-workspace.toml  install.ps1  install.sh  readme.md  task.md  test_workflows.sh
.github/workflows/: ci.yml  release.yml
crates/providers/rust-client/: .env  Cargo.toml  build.rs
crates/providers/rust-client/proto/: chiral.proto
crates/providers/rust-client/src/: client.rs  ftp.rs  lib.rs  main.rs  proto.rs
crates/providers/rust-client/src/api/: client.rs  credits.rs  jobs.rs  mod.rs  projects.rs  token.rs
crates/providers/rust_client/: Cargo.toml
crates/providers/sacloud-rs/: CHANGELOG.md  Cargo.toml  Status.md
crates/providers/sacloud-rs/src/: account.rs  client.rs  enums.rs  lib.rs
crates/providers/sacloud-rs/src/api/: archive.rs  disk.rs  dok.rs  interface.rs  mod.rs  product.rs  server.rs
crates/providers/sacloud-rs/src/api/disk/: params.rs  shortcut.rs  shortcuts.rs
crates/providers/sacloud-rs/src/api/dok/: params.rs  shortcuts.rs
crates/providers/sacloud-rs/src/api/product/: parameter.rs  shortcut.rs  shortcuts.rs
crates/providers/sacloud-rs/src/api/server/: params.rs  shortcut.rs  shortcuts.rs
crates/tui/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  oranda.json
crates/tui/public/: artifacts.json  changelog.rss  index.html  tui-installer.ps1.txt  tui-installer.sh.txt
crates/tui/public/artifacts/: index.html
crates/tui/public/changelog/: index.html
crates/tui/public/changelog/v0.2.2/: index.html
crates/tui/src/: config.rs  constants.rs  data_model.rs  entry.rs  envs.rs  lib.rs  main.rs  ui.rs
crates/tui/src/action/: health_check.rs  server.rs
crates/tui/src/data_model/: account.rs  app.rs  common.rs  job.rs  job_local.rs  pod.rs  pod_type.rs  project.rs  provider.rs  registry.rs  settings.rs
crates/tui/src/data_model/job/: settings.rs
crates/tui/src/data_model/provider/: local.rs  rust_client.rs  sakura_internet.rs
crates/tui/src/sakura/: cache.rs  config.rs  mod.rs  store.rs
crates/tui/src/ui/: home.rs  info.rs  states.rs  tabs.rs
crates/tui/src/ui/account/: list.rs  mod.rs
crates/tui/src/ui/app/: detail.rs  list.rs  mod.rs
crates/tui/src/ui/components/: health_check.rs  helper_hint.rs  job_list_action_bar.rs  job_new_helper.rs  mod.rs  proj_browser.rs
crates/tui/src/ui/infra/: app_detail.rs  app_list.rs  mod.rs  pod_type.rs
crates/tui/src/ui/job/: detail.rs  list.rs  mod.rs
crates/tui/src/ui/job/detail/: params.rs  preview.rs  run.rs
crates/tui/src/ui/layout/: info.rs  mod.rs  tabs.rs
crates/tui/src/ui/pages/: about.rs  mod.rs  welcome.rs
crates/tui/src/ui/pages/job/: app_detail.rs  app_list.rs  chat.rs  config_select.rs  detail.rs  list.rs  mod.rs  pod_type.rs
crates/tui/src/ui/pages/job/detail/: build.rs  cancel.rs  chat.rs  clear.rs  dependencies.rs  files.rs  params.rs  pod.rs  post.rs  pre.rs  preview.rs  run.rs  status.rs
crates/tui/src/ui/pages/project/: app_detail.rs  app_list.rs  browse.rs  list.rs  mod.rs  new_job.rs  pod_type.rs  tabs.rs
crates/tui/src/ui/pages/setting/: account.rs  docker_registry.rs  mod.rs  tabs.rs
crates/tui/src/ui/pages/tutorial/: list.rs  mod.rs
crates/tui/src/ui/pages/welcome/: health_check.rs  mod.rs
crates/tui/src/ui/project/: app_detail.rs  app_list.rs  list.rs  mod.rs  pod_type.rs  proj_list.rs
crates/tui/src/ui/resource/: list.rs  mod.rs  pod_type.rs
crates/tui/src/ui/setting/: account.rs  docker_registry.rs  list.rs  mod.rs  tabs.rs
crates/tui/src/utils/: dirs.rs  docker.rs  file.rs  mod.rs  project.rs
crates/tui/tests/: integration_tests.rs  job_management_tests.rs  job_tests.rs  test_queue_system.rs  ui_tests.rs
devlog/v0.3.0/: feature_health_check.md  milestone.md
doc/: get_started.md  navigation.md  releasing.md  workflows.md
doc/changelogs/: v0.3.7.md
docs/: README.md
docs/apps/: Ollama.md
docs/dev/: DOCKER_USAGE.md  WORKFLOW_USAGE.md
docs/examples/: DeepSeek.md
docs/features/: v0.3.0.md
docs/features/v0.3.0/: feature_def.md  feature_health_check.md  milestone_def.md
examples/: docker_executor.rs
examples/gromacs/: Dockerfile  Dockerfile.bak  job.sh  settings.toml
examples/gromacs/benchmark-mpi/: @job.toml  @post.sh  @pre.sh  run.sh
job_config/: Cargo.toml  README.md
job_config/src/: config.rs  job.rs  lib.rs  params.rs  workflow.rs
silva/: Cargo.toml
silva/examples/: docker_executor.rs
silva/src/: app.rs  headless.rs  layout.rs  lib.rs  main.rs  precheck.rs  update.rs  utils.rs
silva/tests/: integration_complete.rs  integration_precheck.rs
src/: app.rs  lib.rs  main.rs  style.rs
src/job_config/: config.rs
src/layout/: footer.rs  header.rs  sidebar.rs
(+114 files in other folders)
