[package]
name = "silva"
version = "0.3.2"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bollard = "0.17"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
tar = "0.4"
futures-util = "0.3"
flume = "0.11"
textwrap = "0.16"
tempfile = "3.0"
fs_extra = "1.3"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json"] }
