[package]
name = "job_config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration parser for Silva workflow jobs with TOML support"
readme = "README.md"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
