[package]
name = "tui"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/chiral-data/silva"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] } 
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# xdg = "2.5"
app_dirs2 = "2.5"
home = "0.5"
toml = "0.8"
bollard = "0.18"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
ollama-rs = { version = "0.2.4", features = ["stream"] }
tui-markdown = "0.3"
sacloud-rs = { path = "../providers/sacloud-rs" }

[[bin]]
name = "silva"
path = "src/main.rs"
