[package]
name = "silva-tui"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/chiral-data/silva"

[package.metadata.wix]
upgrade-guid = "2B4A6BBF-B608-45E6-AC9F-5DE8C85CFFFE"
path-guid = "DCBD6967-FD73-4897-B98E-27F719AEDAE2"
license = false
eula = false

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] } 
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# xdg = "2.5"
# app_dirs2 = "2.5"
directories = "6.0"
toml = "0.8"
bollard = "0.19"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
ollama-rs = { version = "0.2.4", features = ["stream"] }
tui-markdown = "0.3"
sacloud-rs = { path = "../providers/sacloud-rs"}
rust_client = {path ="../providers/rust_client"}
dotenvy = "0.15"
tonic = "0.10"
chiral-client = "0.1.0"

[[bin]]
name = "silva"
path = "src/main.rs"

[package.metadata.dist]
dist = true