[package]
name = "sacloud-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "^1.0"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
home = "0.5"
ssh2 = "0.9"
