[package]
name = "sacloud-rs"
version = "0.1.1"
edition = "2021"
description = "Rust SDK for Sakura Internet API"
homepage = "https://manual.sakura.ad.jp/cloud-api/1.1/index.html" 
repository = "https://github.com/chiral-data/silva" 
keywords = ["sakura", "rust"] 
license = "MPL-2.0"

[dependencies]
anyhow = "^1.0"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
home = "0.5"
ssh2 = "0.9"

[package.metadata.dist]
dist = true